# vais

./: .dockerignore  .gitignore  .workflow-state.json  AGENTS.md  AOEL_GRAMMAR_SPEC_v0.2.md  AOEL_MASTER_SPEC.md  API_DOCS_QUICK_START.md  ASYNC_TYPE_CHECKING_IMPROVEMENTS.md  BASELINE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_README.md  DEPLOYMENT_STRATEGY.md  DESIGN.md  DNS_CONFIGURATION.md  Dockerfile  Dockerfile.playground  Dockerfile.registry  FFI_FEATURES.md  FFI_GUIDE.md  FFI_IMPLEMENTATION_SUMMARY.md  FUZZ_TEST_RESULTS.md  GC_IMPLEMENTATION_SUMMARY.md  HOT_RELOAD_IMPLEMENTATION.md  HOT_RELOAD_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_BINDINGS.md  LICENSE  MIGRATION.md  NOTICE  PERFORMANCE_REGRESSION_SETUP.md  PHASE33_STAGE4_SUMMARY.md  PHASE33_TEST_LIST.md  PHASE34_STAGE8_CHECKLIST.md  PHASE34_STAGE8_SUMMARY.md  PLAYGROUND_IMPLEMENTATION.md  (+37 more)
aoel-rs/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
aoel-rs/benches/: benchmarks.rs  jit_benchmarks.rs
aoel-rs/crates/aoel-ast/: Cargo.toml
aoel-rs/crates/aoel-cli/: Cargo.toml
aoel-rs/crates/aoel-codegen/: Cargo.toml
aoel-rs/crates/aoel-ir/: Cargo.toml
aoel-rs/crates/aoel-jit/: Cargo.toml
aoel-rs/crates/aoel-lexer/: Cargo.toml
aoel-rs/crates/aoel-lowering/: Cargo.toml
aoel-rs/crates/aoel-lsp/: Cargo.toml
aoel-rs/crates/aoel-parser/: Cargo.toml
aoel-rs/crates/aoel-playground/: Cargo.toml  README.md  build.sh
aoel-rs/crates/aoel-tools/: Cargo.toml
aoel-rs/crates/aoel-typeck/: Cargo.toml
aoel-rs/crates/aoel-v6b-ast/: Cargo.toml
aoel-rs/crates/aoel-v6b-lexer/: Cargo.toml
aoel-rs/crates/aoel-v6b-lowering/: Cargo.toml
aoel-rs/crates/aoel-v6b-parser/: Cargo.toml
aoel-rs/crates/aoel-vm/: Cargo.toml
aoel-rs/crates/vais-ast/: Cargo.toml
aoel-rs/crates/vais-cli/: Cargo.toml
aoel-rs/crates/vais-codegen/: Cargo.toml
aoel-rs/crates/vais-jit/: Cargo.toml
aoel-rs/crates/vais-lexer/: Cargo.toml
aoel-rs/crates/vais-lowering/: Cargo.toml
aoel-rs/crates/vais-parser/: Cargo.toml
aoel-rs/crates/vais-playground/: build.sh
aoel-rs/crates/vais-vm/: Cargo.toml
aoel-rs/docs/: CONTRIBUTING.md  GETTING_STARTED.md  LANGUAGE_REFERENCE.md
aoel-rs/editors/vscode/: README.md  language-configuration.json  package.json
aoel-rs/examples/: collection_ops.aoel  factorial.aoel  jit_bench.rs  test.aoel  test_jit.aoel
aoel-rs/examples/aoel/: arithmetic.aoel  collection_chain  collection_filter  collection_ops.aoel  collection_reduce_all  collection_reduce_all.aoel  collection_simple.c  factorial  factorial.ll  fib  fib.c  fib35.aoel  module_test.aoel  stdlib_test.aoel  stdlib_test2
aoel-rs/examples/vais/: collection_chain.vais  collection_filter.vais  collection_reduce  collection_reduce.vais  collection_simple  collection_simple.c  collection_simple.vais  factorial.vais  fib.c  fib35  stdlib_test2.vais  typecheck_test.vais  typecheck_test2.vais
aoel-rs/scripts/: benchmark_jit.py  compare_performance.py  compare_tokens.py
aoel-rs/tests/: integration_tests.rs
benches/: BASELINE.md  COMPARISON.md  Cargo.toml  PARALLEL_BENCH_README.md  QUICKSTART.md  README.md  analyze_bench.sh  clone_reduction_bench.rs  compile_bench.rs  compiler_benchmarks.rs  endurance_bench.rs  gc_bench.rs  gpu_bench.rs  incremental_bench.rs  inlining_bench.rs  largescale_bench.rs  lib.rs  macro_bench.rs  memory_bench.rs  optimization_bench.rs  parallel_bench.rs  performance_bench.rs  phase33_bench.rs  regression_check.sh  runtime_bench.rs  simd_bench.rs  tcp_bench.rs
benches/fixtures/: README.md  complex.vais  fibonacci.vais  gen_large_example.rs  sort.vais  struct_heavy.vais
benches/lang-comparison/: compile_bench.sh  count_tokens.py
benches/tests/: generator_tests.rs
crates/vais-ast/: Cargo.toml
crates/vais-bindgen/: CPP_IMPLEMENTATION_SUMMARY.md  CPP_QUICK_START.md  CPP_SUPPORT.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_SUMMARY.md  README.md
crates/vais-browser-compiler/: Cargo.toml
crates/vais-codegen/: Cargo.toml
crates/vais-codegen-js/: Cargo.toml
crates/vais-dap/: Cargo.toml  README.md
crates/vais-dynload/: Cargo.toml
crates/vais-gc/: Cargo.toml  README.md
crates/vais-gpu/: Cargo.toml
crates/vais-hotreload/: Cargo.toml  README.md
crates/vais-i18n/: Cargo.toml
crates/vais-jit/: Cargo.toml
crates/vais-lexer/: Cargo.toml
crates/vais-lsp/: CODE_ACTIONS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LSP_1.18_FEATURES.md
crates/vais-macro/: Cargo.toml
crates/vais-node/: Cargo.toml  README.md  package.json
crates/vais-parser/: Cargo.toml
crates/vais-playground-server/: Cargo.toml
crates/vais-plugin/: Cargo.toml
crates/vais-profiler/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/vais-python/: .gitignore  Cargo.toml  README.md  example.py  pyproject.toml
crates/vais-query/: Cargo.toml
crates/vais-registry-server/: Cargo.toml  Dockerfile  Dockerfile.fly  README.md  docker-compose.yml
crates/vais-security/: Cargo.toml  README.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/dictionaries/: vais.dict
fuzz/fuzz_targets/: fuzz_codegen.rs  fuzz_full_pipeline.rs  fuzz_lexer.rs  fuzz_mir_native_diff.rs  fuzz_parser.rs  fuzz_type_checker.rs
fuzz/oss-fuzz/: Dockerfile  build.sh  project.yaml
fuzz/src/: lib.rs
vais-rs/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
vais-rs/benches/: benchmarks.rs  jit_benchmarks.rs
vais-rs/benchmark/: bench_chain.vais  bench_factorial10.vais  bench_factorial20.vais  bench_fib20.vais  bench_fib30.vais  bench_filter1000.vais  bench_map1000.vais  bench_reduce1000.vais  bench_sum100.vais  compare_bench.py  fast_bench.rs  full_comparison.py  internal_bench.rs  python_bench.py  run_benchmark.sh  vais_bench.py  vais_bench.vais
vais-rs/docs/: CONTRIBUTING.md  GETTING_STARTED.md  LANGUAGE_REFERENCE.md
vais-rs/examples/: basic_api.rs  call_jit.vais  debug_ir.rs  fast_bench.rs  fast_bench_selfcall.rs  fib_compare.rs  full_bench.rs  simple_jit.vais  test.vais
vais-rs/scripts/: bench_regression.sh  compare_performance.py
vais-rs/tests/: integration_tests.rs
(+6424 files in other folders)
