[workspace]
resolver = "2"
members = [
    "crates/vais-lexer",
    "crates/vais-parser",
    "crates/vais-ast",
    "crates/vais-types",
    "crates/vais-codegen",
    "crates/vais-lsp",
    "crates/vais-i18n",
    "crates/vais-plugin",
    "crates/vais-jit",
    "crates/vais-gc",
    "crates/vais-gpu",
    "crates/vais-hotreload",
    "crates/vais-macro",
    # "crates/vais-python",  # Requires Python <= 3.13 (PyO3 limitation)
    "crates/vais-node",
    "crates/vaisc",
    "examples/plugins/example-lint",
    "benches",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Vais Team"]
license = "MIT"
repository = "https://github.com/sswoo88/vais"
description = "Vais 0.0.1 - AI-optimized systems programming language with LLVM backend"

[workspace.dependencies]
# Core
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }

# Parsing
logos = "0.14"

# LLVM (optional - requires LLVM 17 installed)
inkwell = { version = "0.4", features = ["llvm17-0"] }

# Utils
ariadne = "0.4"
codespan-reporting = "0.11"
colored = "2.1"

# Testing
pretty_assertions = "1.4"
