[workspace]
resolver = "2"
members = [
    "crates/vais-lexer",
    "crates/vais-parser",
    "crates/vais-ast",
    "crates/vais-types",
    "crates/vais-codegen",
    "crates/vais-lsp",
    "crates/vais-dap",
    "crates/vais-i18n",
    "crates/vais-plugin",
    "crates/vais-jit",
    "crates/vais-gc",
    "crates/vais-gpu",
    "crates/vais-hotreload",
    "crates/vais-dynload",
    "crates/vais-macro",
    "crates/vais-profiler",
    "crates/vais-registry-server",
    "crates/vais-playground-server",
    "crates/vais-tutorial",
    "crates/vais-python",
    "crates/vais-node",
    "crates/vais-bindgen",
    "crates/vais-codegen-js",
    "crates/vais-query",
    "crates/vais-mir",
    "crates/vais-testgen",
    "crates/vais-supply-chain",
    "crates/vais-security",
    "crates/vaisc",
    "examples/plugins/example-lint",
    "benches",
]
# Exclude Python/Node bindings from default build - they require
# their respective language toolchains (maturin for Python, napi for Node)
default-members = [
    "crates/vais-lexer",
    "crates/vais-parser",
    "crates/vais-ast",
    "crates/vais-types",
    "crates/vais-codegen",
    "crates/vais-lsp",
    "crates/vais-dap",
    "crates/vais-i18n",
    "crates/vais-plugin",
    "crates/vais-jit",
    "crates/vais-gc",
    "crates/vais-gpu",
    "crates/vais-hotreload",
    "crates/vais-dynload",
    "crates/vais-macro",
    "crates/vais-profiler",
    "crates/vais-registry-server",
    "crates/vais-playground-server",
    "crates/vais-tutorial",
    "crates/vais-bindgen",
    "crates/vais-codegen-js",
    "crates/vais-query",
    "crates/vais-mir",
    "crates/vais-testgen",
    "crates/vais-supply-chain",
    "crates/vais-security",
    "crates/vaisc",
    "examples/plugins/example-lint",
    "benches",
]

[workspace.package]
version = "0.0.5"
edition = "2021"
authors = ["Vais Team"]
license = "MIT"
repository = "https://github.com/vaislang/vais"
description = "Vais - AI-optimized systems programming language with LLVM backend"

[workspace.dependencies]
# Core
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }

# Parsing
logos = "0.14"

# LLVM (optional - requires LLVM 17 installed)
inkwell = { version = "0.8", features = ["llvm17-0"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Parallelism
rayon = "1.10"

# Cryptography
sha2 = "0.10"

# Archive handling
flate2 = "1.0"
tar = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
colored = "3"

# Testing
pretty_assertions = "1.4"

[profile.release]
strip = true
lto = "thin"
opt-level = 3

[profile.coverage]
inherits = "dev"
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
