[workspace]
resolver = "2"
members = [
    "crates/vais-lexer",
    "crates/vais-parser",
    "crates/vais-ast",
    "crates/vais-types",
    "crates/vais-codegen",
    "crates/vais-lsp",
    "crates/vais-dap",
    "crates/vais-i18n",
    "crates/vais-plugin",
    "crates/vais-jit",
    "crates/vais-gc",
    "crates/vais-gpu",
    "crates/vais-hotreload",
    "crates/vais-dynload",
    "crates/vais-macro",
    "crates/vais-profiler",
    "crates/vais-registry-server",
    "crates/vais-playground-server",
    "crates/vais-tutorial",
    "crates/vais-python",
    "crates/vais-node",
    "crates/vais-bindgen",
    "crates/vais-browser-compiler",
    "crates/vais-codegen-js",
    "crates/vais-query",
    "crates/vais-mir",
    "crates/vais-testgen",
    "crates/vais-supply-chain",
    "crates/vais-security",
    "crates/vaisc",
    "examples/plugins/example-lint",
    "benches",
]
# Phase 0.A (2026-04-25): default-members reduced to core (7) + auxiliary (6).
# Experimental crates remain in `members` so `cargo build -p <name>` still
# works, but `cargo build` / `cargo test` no longer compile them by default.
# This keeps the v1.0 trust path (lang conformance + stdlib + hello-world)
# deterministic and fast, and prevents an unrelated experimental-crate
# breakage from blocking the main compiler.
#
# To opt-in to the full surface: `cargo build --workspace` (or per-crate
# `cargo build -p vais-jit`). Python/Node bindings still need their own
# toolchains (maturin / napi).
#
# Tier definitions: see `compiler/docs/CRATE_AUDIT.md`.
default-members = [
    # Core (production-track) — must be green for v1.0
    "crates/vais-lexer",
    "crates/vais-parser",
    "crates/vais-ast",
    "crates/vais-types",
    "crates/vais-codegen",
    "crates/vais-mir",
    "crates/vaisc",
    # Auxiliary (best-effort, not v1.0-blocking)
    "crates/vais-lsp",
    "crates/vais-dap",
    "crates/vais-i18n",
    "crates/vais-plugin",
    "crates/vais-macro",
    "crates/vais-bindgen",
    # Test fixtures + benchmarks: keep building so infra rot surfaces early.
    "examples/plugins/example-lint",
    "benches",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vais Team"]
license = "MIT"
repository = "https://github.com/vaislang/vais"
description = "Vais - AI-optimized systems programming language with LLVM backend"

[workspace.dependencies]
# Core
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }

# Parsing
logos = "0.16"

# LLVM (optional - requires LLVM 17 installed)
inkwell = { version = "0.4", features = ["llvm17-0"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Parallelism
rayon = "1.10"

# Cryptography
sha2 = "0.10"

# Archive handling
flate2 = "1.0"
tar = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
colored = "3"

# Testing
pretty_assertions = "1.4"
proptest = "1.5"

[profile.release]
strip = true
lto = "thin"
opt-level = 3

[profile.coverage]
inherits = "dev"
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
