[workspace]
resolver = "2"
members = [
    "crates/aoel-lexer",
    "crates/aoel-ast",
    "crates/aoel-parser",
    "crates/aoel-typeck",
    "crates/aoel-lowering",
    "crates/aoel-ir",
    "crates/aoel-vm",
    "crates/aoel-codegen",
    "crates/aoel-jit",
    "crates/aoel-tools",
    "crates/aoel-lsp",
    "crates/aoel-cli",
    "crates/aoel-playground",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AOEL Team"]
license = "MIT"
repository = "https://github.com/aoel-lang/aoel"
description = "AI-Optimized Executable Language"

[workspace.dependencies]
# Internal crates
aoel-lexer = { path = "crates/aoel-lexer" }
aoel-ast = { path = "crates/aoel-ast" }
aoel-parser = { path = "crates/aoel-parser" }
aoel-typeck = { path = "crates/aoel-typeck" }
aoel-lowering = { path = "crates/aoel-lowering" }
aoel-ir = { path = "crates/aoel-ir" }
aoel-vm = { path = "crates/aoel-vm" }
aoel-codegen = { path = "crates/aoel-codegen" }
aoel-jit = { path = "crates/aoel-jit" }
aoel-tools = { path = "crates/aoel-tools" }

# External dependencies
thiserror = "1.0"
logos = "0.14"           # Fast lexer generator
ariadne = "0.4"          # Beautiful error reporting
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true

# Root package for integration tests and benchmarks
[package]
name = "aoel-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
jit = ["aoel-vm/jit", "aoel-jit"]

[dependencies]
aoel-lexer = { path = "crates/aoel-lexer" }
aoel-parser = { path = "crates/aoel-parser" }
aoel-lowering = { path = "crates/aoel-lowering" }
aoel-ir = { path = "crates/aoel-ir" }
aoel-vm = { path = "crates/aoel-vm" }
aoel-jit = { path = "crates/aoel-jit", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "jit_benchmarks"
harness = false
required-features = ["jit"]
