[package]
name = "vais-benches"
version.workspace = true
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[[bench]]
name = "compile_bench"
path = "compile_bench.rs"
harness = false

[[bench]]
name = "runtime_bench"
path = "runtime_bench.rs"
harness = false

[[bench]]
name = "gc_bench"
path = "gc_bench.rs"
harness = false

[[bench]]
name = "compiler_benchmarks"
path = "compiler_benchmarks.rs"
harness = false

[[bench]]
name = "inlining_bench"
path = "inlining_bench.rs"
harness = false

[[bench]]
name = "performance_bench"
path = "performance_bench.rs"
harness = false

[[bench]]
name = "phase33_bench"
path = "phase33_bench.rs"
harness = false

[dependencies]
vais-lexer = { path = "../crates/vais-lexer" }
vais-parser = { path = "../crates/vais-parser" }
vais-ast = { path = "../crates/vais-ast" }
vais-types = { path = "../crates/vais-types" }
vais-codegen = { path = "../crates/vais-codegen" }
vais-gc = { path = "../crates/vais-gc" }
criterion = { version = "0.5", features = ["html_reports"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"
