[package]
name = "vais-benches"
version.workspace = true
edition = "2021"
license.workspace = true
publish = false

[lib]
path = "lib.rs"

[[bench]]
name = "compile_bench"
path = "compile_bench.rs"
harness = false

[[bench]]
name = "runtime_bench"
path = "runtime_bench.rs"
harness = false

[[bench]]
name = "gc_bench"
path = "gc_bench.rs"
harness = false

[[bench]]
name = "compiler_benchmarks"
path = "compiler_benchmarks.rs"
harness = false

[[bench]]
name = "inlining_bench"
path = "inlining_bench.rs"
harness = false

[[bench]]
name = "performance_bench"
path = "performance_bench.rs"
harness = false

[[bench]]
name = "phase33_bench"
path = "phase33_bench.rs"
harness = false

[[bench]]
name = "macro_bench"
path = "macro_bench.rs"
harness = false

[[bench]]
name = "largescale_bench"
path = "largescale_bench.rs"
harness = false

[[bench]]
name = "simd_bench"
path = "simd_bench.rs"
harness = false

[[bench]]
name = "parallel_bench"
path = "parallel_bench.rs"
harness = false

[[bench]]
name = "tcp_bench"
path = "tcp_bench.rs"
harness = false

[[bench]]
name = "endurance_bench"
path = "endurance_bench.rs"
harness = false

[[bench]]
name = "gpu_bench"
path = "gpu_bench.rs"
harness = false

[[bench]]
name = "incremental_bench"
path = "incremental_bench.rs"
harness = false

[[example]]
name = "gen_large_example"
path = "fixtures/gen_large_example.rs"

[dependencies]
vais-lexer = { path = "../crates/vais-lexer" }
vais-parser = { path = "../crates/vais-parser" }
vais-ast = { path = "../crates/vais-ast" }
vais-types = { path = "../crates/vais-types" }
vais-codegen = { path = "../crates/vais-codegen" }
vais-gc = { path = "../crates/vais-gc" }
vais-gpu = { path = "../crates/vais-gpu" }
criterion = { version = "0.8", features = ["html_reports"] }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"
tempfile = "3.15"
