[workspace]
resolver = "2"
members = [
    "crates/vais-lexer",
    "crates/vais-ast",
    "crates/vais-parser",
    "crates/vais-typeck",
    "crates/vais-lowering",
    "crates/vais-ir",
    "crates/vais-vm",
    "crates/vais-codegen",
    "crates/vais-jit",
    "crates/vais-tools",
    "crates/vais-lsp",
    "crates/vais-cli",
    "crates/vais-playground",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Vais Team"]
license = "MIT"
repository = "https://github.com/vais-lang/vais"
description = "Vibe AI SSW Language - AI-Optimized Programming Language"

[workspace.dependencies]
# Internal crates
vais-lexer = { path = "crates/vais-lexer" }
vais-ast = { path = "crates/vais-ast" }
vais-parser = { path = "crates/vais-parser" }
vais-typeck = { path = "crates/vais-typeck" }
vais-lowering = { path = "crates/vais-lowering" }
vais-ir = { path = "crates/vais-ir" }
vais-vm = { path = "crates/vais-vm" }
vais-codegen = { path = "crates/vais-codegen" }
vais-jit = { path = "crates/vais-jit" }
vais-tools = { path = "crates/vais-tools" }

# External dependencies
thiserror = "1.0"
logos = "0.14"           # Fast lexer generator
ariadne = "0.6"          # Beautiful error reporting
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true

# Root package for integration tests and benchmarks
[package]
name = "vais-workspace"
version = "1.0.0"
edition = "2021"
publish = false

[features]
default = []
jit = ["vais-vm/jit", "vais-jit"]

[dependencies]
vais-lexer = { path = "crates/vais-lexer" }
vais-parser = { path = "crates/vais-parser" }
vais-lowering = { path = "crates/vais-lowering" }
vais-ir = { path = "crates/vais-ir" }
vais-vm = { path = "crates/vais-vm" }
vais-jit = { path = "crates/vais-jit", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "jit_benchmarks"
harness = false
required-features = ["jit"]
