[package]
name = "vais-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Abstract Syntax Tree definitions for the Vais programming language"

[dependencies]

[dev-dependencies]
vais-parser = { path = "../vais-parser" }
vais-lexer = { path = "../vais-lexer" }
