[package]
name = "vais-bindgen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI binding generator for the Vais programming language"

[dependencies]
regex = "1.10"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "vais-bindgen"
path = "src/bin/vais-bindgen.rs"
