[package]
name = "vais-browser-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Browser-safe Vais compiler facade for playground JavaScript execution"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
vais-codegen-js = { path = "../vais-codegen-js" }
vais-parser = { path = "../vais-parser" }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
