[package]
name = "vais-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LLVM IR code generator for the Vais programming language"

[features]
default = ["inkwell-codegen"]
text-codegen = []
inkwell-codegen = ["inkwell"]

[dependencies]
vais-ast = { path = "../vais-ast" }
vais-types = { path = "../vais-types" }
thiserror = { workspace = true }
rayon = "1.10"

# LLVM (optional - requires LLVM 17 installed)
inkwell = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
vais-parser = { path = "../vais-parser" }
