[package]
name = "vais-dap"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Debug Adapter Protocol server for Vais"

[dependencies]
# DAP protocol (JSON-RPC based)
tokio = { version = "1", features = ["full", "process", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

# Vais compiler (for source mapping)
vais-lexer = { path = "../vais-lexer" }
vais-parser = { path = "../vais-parser" }
vais-ast = { path = "../vais-ast" }
vais-codegen = { path = "../vais-codegen" }

# DWARF parsing
gimli = "0.28"
object = { version = "0.32", features = ["read"] }

# Utilities
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
base64 = "0.22"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[lib]
name = "vais_dap"
path = "src/lib.rs"

[[bin]]
name = "vais-dap"
path = "src/main.rs"
