[package]
name = "vais-dap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Debug Adapter Protocol server for Vais"

[dependencies]
# DAP protocol (JSON-RPC based)
tokio = { workspace = true, features = ["process", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"

# Vais compiler (for source mapping)
vais-lexer = { path = "../vais-lexer" }
vais-parser = { path = "../vais-parser" }
vais-ast = { path = "../vais-ast" }
vais-codegen = { path = "../vais-codegen" }

# DWARF parsing
gimli = "0.28"
object = { version = "0.32", features = ["read"] }

# Utilities
thiserror.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
futures = "0.3"
base64 = "0.22"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[lib]
name = "vais_dap"
path = "src/lib.rs"

[[bin]]
name = "vais-dap"
path = "src/main.rs"
