[package]
name = "vais-dynload"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Dynamic module loading and WASM plugin sandboxing for Vais"

[dependencies]
# Workspace dependencies
thiserror.workspace = true

# Plugin and hot reload dependencies
vais-plugin = { path = "../vais-plugin" }
vais-hotreload = { path = "../vais-hotreload" }
vais-ast = { path = "../vais-ast" }

# WASM runtime
wasmtime = "17.0"

# Async runtime for WASM
tokio = { workspace = true, features = ["rt", "sync", "time"] }

# File system operations
notify = "6.1"
libloading = "0.8"

# Configuration
toml = "0.8"
serde = { workspace = true }

# Utilities
semver = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
