[package]
name = "vais-gpu"
version.workspace = true
edition = "2021"
description = "GPU code generation for Vais programming language"
license = "MIT"

[features]
default = []
cuda = []
metal = []
opencl = []
webgpu = []
# Convenience feature to enable all backends
all = ["cuda", "metal", "opencl", "webgpu"]

[dependencies]
vais-ast = { path = "../vais-ast" }
vais-types = { path = "../vais-types" }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
vais-parser = { path = "../vais-parser" }
