[package]
name = "vais-hotreload"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hot reloading support for Vais language"

[dependencies]
thiserror.workspace = true
notify = "6.1"
libloading = "0.8"

[dev-dependencies]
tempfile = "3.8"
