[package]
name = "vais-i18n"
version = "0.0.1"
edition = "2021"
authors = ["Steve"]
description = "Internationalization support for Vais compiler error messages"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"

[dev-dependencies]
