[package]
name = "vais-i18n"
version.workspace = true
edition = "2021"
authors = ["Steve"]
description = "Internationalization support for Vais compiler error messages"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.18"

[dev-dependencies]
