[package]
name = "vais-jit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JIT compiler for Vais using Cranelift"

[dependencies]
# Cranelift JIT
cranelift = "0.128"
cranelift-jit = "0.128"
cranelift-module = "0.128"
cranelift-native = "0.129"
cranelift-codegen = "0.128"

# Vais crates
vais-ast = { path = "../vais-ast" }
vais-types = { path = "../vais-types" }

# Error handling
thiserror.workspace = true

# Platform-specific
target-lexicon = "0.13"
libc = "0.2"

[dev-dependencies]
vais-parser = { path = "../vais-parser" }
