[package]
name = "vais-lexer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lexer/tokenizer for the Vais programming language"

[dependencies]
logos = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
