[package]
name = "vais-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for Vais"

[dependencies]
# LSP
tower-lsp = "0.20"
tokio = { workspace = true }

# Vais compiler
vais-lexer = { path = "../vais-lexer" }
vais-parser = { path = "../vais-parser" }
vais-ast = { path = "../vais-ast" }
vais-types = { path = "../vais-types" }
vais-codegen = { path = "../vais-codegen" }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = "5"
ropey = "1"

[lib]
name = "vais_lsp"
path = "src/lib.rs"

[[bin]]
name = "vais-lsp"
path = "src/main.rs"
