[package]
name = "vais-macro"
version.workspace = true
edition = "2021"
description = "Declarative macro system for Vais language"

[dependencies]
vais-ast = { path = "../vais-ast" }
vais-lexer = { path = "../vais-lexer" }
vais-parser = { path = "../vais-parser" }
thiserror = "1.0"

[dev-dependencies]
