[package]
name = "vais-macro"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Declarative macro system for Vais language"

[dependencies]
vais-ast = { path = "../vais-ast" }
vais-lexer = { path = "../vais-lexer" }
vais-parser = { path = "../vais-parser" }
thiserror = { workspace = true }

[dev-dependencies]
