[package]
name = "vais-playground-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Server-side compilation and execution service for the Vais Playground"

[[bin]]
name = "vais-playground"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compiler crates
vais-lexer = { path = "../vais-lexer" }
vais-parser = { path = "../vais-parser" }
vais-types = { path = "../vais-types" }
vais-codegen = { path = "../vais-codegen" }
vais-macro = { path = "../vais-macro" }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
