[package]
name = "vais-playground-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Server-side compilation and execution service for the Vais Playground"

[[bin]]
name = "vais-playground"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
tempfile = "3.0"
