[package]
name = "vais-plugin"
version.workspace = true
edition = "2021"
authors = ["Steve"]
description = "Plugin system for Vais compiler extensions"
license = "MIT"

[dependencies]
vais-ast = { path = "../vais-ast" }
libloading = "0.8"
toml = "0.8"
serde = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
