[package]
name = "vais-plugin"
version.workspace = true
edition = "2021"
authors = ["Steve"]
description = "Plugin system for Vais compiler extensions"
license = "MIT"

[dependencies]
vais-ast = { path = "../vais-ast" }
libloading = "0.9"
toml = "1.0"
serde = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
