[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vais"
version = "0.0.1"
description = "Python bindings for the Vais compiler"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["compiler", "llvm", "systems-programming", "vais"]
authors = [
    { name = "Vais Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/sswoo88/vais"
Repository = "https://github.com/sswoo88/vais"

[tool.maturin]
python-source = "python"
module-name = "vais"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
